# CTU_KOA

./: .gitignore
cocontest/: CMakeLists.txt  Problem.cpp  Problem.h  common_types.h  heuristics.cpp  heuristics.h  main.cpp  tabu_search.cpp  tabu_search.h
cocontest/optimal_solution/: lazy_constraints_ilp.py  main.py
hws/hw1/: main.py  tsp_solver.py
hws/hw2/: CMakeLists.txt  main.cpp
hws/hw3/: CMakeLists.txt  main.cpp
labs/call_center/: Call center scheduling_todo.ipynb
labs/catering/: Catering.ipynb
labs/ilp_basics/: ILP basics.ipynb
labs/test_gurobi/: main.cpp
labs/tiles/: Tiles.ipynb
labs/tiles/cpp/: CMakeLists.txt
labs/tiles/cpp/modules/: FindGUROBI.cmake
